src/dep.h

struct nameseq
  {
    NAMESEQ (struct nameseq);
  };
struct nameseq *ar_glob (const char *arname, const char *member_pattern, size_t size);